# engine

./: .gclient  BUILD.gn  DEPS
ci/: 1_dart_skip
ci/licenses_golden/: licenses_flutter
common/: 1_dart_complete  settings.cc  settings.h
flow/: 1_dart_cleaned  BUILD.gn
flow/layers/: clip_path_layer.cc  clip_path_layer.h  clip_rect_layer.cc  clip_rect_layer.h  clip_rrect_layer.cc  clip_rrect_layer.h  container_layer.cc  container_layer.h  default_layer_builder.cc  default_layer_builder.h  layer.cc  layer.h  layer_builder.h  layer_tree.cc  layer_tree.h  physical_shape_layer.cc  physical_shape_layer.h  transform_layer.cc  transform_layer.h
fml/: 1_dart_cleaned  BUILD.gn  trace_event.cc  trace_event.h
lib/ui/: BUILD.gn  dart_wrapper.h  ui_dart_state.cc  ui_dart_state.h
lib/ui/compositing/: scene.cc  scene.h  scene_builder.cc  scene_builder.h  scene_host.cc  scene_host.h
lib/ui/painting/: canvas.cc  canvas.h  codec.cc  codec.h  engine_layer.cc  engine_layer.h  frame_info.cc  frame_info.h  gradient.cc  gradient.h  image.cc  image.h  image_encoding.cc  image_encoding.h  image_filter.cc  image_filter.h  image_shader.cc  image_shader.h  path.cc  path.h  path_measure.cc  path_measure.h  picture.cc  picture.h  picture_recorder.cc  picture_recorder.h  shader.cc  shader.h
lib/ui/semantics/: custom_accessibility_action.h  semantics_update.cc  semantics_update.h  semantics_update_builder.cc  semantics_update_builder.h
lib/ui/text/: font_collection.cc  font_collection.h  paragraph.cc  paragraph.h  paragraph_builder.cc  paragraph_builder.h  paragraph_impl.h  paragraph_impl_txt.cc  paragraph_impl_txt.h  text_box.cc  text_box.h
lib/ui/window/: window.cc  window.h
runtime/: BUILD.gn  runtime_controller.cc  runtime_controller.h  runtime_delegate.h  service_protocol.cc  service_protocol.h
shell/common/: BUILD.gn  animator.cc  engine.cc  engine.h  run_configuration.cc  run_configuration.h  shell.cc  shell.h  skia_event_tracer_impl.cc  switches.cc
shell/gpu/: gpu_surface_gl.cc
shell/platform/android/: BUILD.gn  flutter_main.cc  platform_view_android_jni.cc
shell/platform/darwin/: BUILD.gn
shell/platform/darwin/common/: BUILD.gn
shell/platform/darwin/desktop/: BUILD.gn  flutter_window.mm
shell/platform/darwin/ios/: BUILD.gn  platform_view_ios.h  platform_view_ios.mm
shell/platform/darwin/ios/framework/Headers/: Flutter.h  FlutterAppDelegate.h  FlutterViewController.h
shell/platform/darwin/ios/framework/Source/: FlutterAppDelegate.mm  FlutterViewController.mm
shell/platform/embedder/: BUILD.gn  embedder.cc  embedder.h
shell/testing/: BUILD.gn  tester_main.cc
shell/version/: version.gni
synchronization/: BUILD.gn
