# Copyright 2014 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("$flutter_root/common/config.gni")

group("flutter") {
  testonly = true

  public_deps = [
    "$flutter_root/shell/platform/embedder:flutter_engine"
  ]

  if (!is_fuchsia) {
    deps = [ "$flutter_root/shell" ]
  }
}

config("config") {
  include_dirs = [ ".." ]
}

group("dist") {
  testonly = true

  deps = [
    "$flutter_root/sky/dist",
    "$flutter_root/shell"
  ]
}
