# Copyright 2013 The Flutter Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

declare_args() {
  shell_engine_version = "0"

  shell_skia_version = "0"

  shell_dart_version = "0"
}
# Deleted version assignment; refer to git history. 
# Was getting KeyError: 'GYP_MSVS_OVERRIDE_PATH' executing the git_revision.py script
